--- a/app/views/figures/index.erb
+++ b/app/views/figures/index.erb
@@ -5,8 +5,8 @@
     <title></title>
   </head>
   <body>
-    <ul><% @landmarks.each do |landmark| %>
-        <li><%= landmark.name %> - <%= landmark.year_completed %></li>
+    <ul><% @figures.each do |figure| %>
+        <li><%= figure.name %></li>
         <% end %>
     </ul>
   </body>
