--- a/app/views/figures/index.erb
+++ b/app/views/figures/index.erb
@@ -2,3 +2,9 @@
   <% @figures.each do |figure| %>
     <h3> <a href="/figures/<%= figure.id %>"> <%= figure.name %></a></h3>
   <% end %>
+
+<br></br>
+
+  <form action="/landmarks">
+    <input type="submit" value="Landmarks">
+  </form>
